--- a/static/common.css
+++ b/static/common.css
@@ -17,6 +17,7 @@ h1,h2,h3,h4,h5,h6{
 }
 body{
     line-height: 1.4;
+    background: #fff;
 }
 .slide-right-enter-active,
 .slide-right-leave-active,
